syntax = "proto3";

package api;

option go_package = "./";

service URLShortener {
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse);
  rpc GetLinkByToken(GetLinkRequest) returns (GetLinkResponse);
}

message GetTokenRequest {
  string link = 1;
}

message GetTokenResponse {
  string token = 1;
}

message GetLinkRequest {
  string token = 1;
}

message GetLinkResponse {
  string link = 1;
}